More translation code improvement.